added items docs and fixed auth docs
