# internal/handlers/item_handler.go
@@ -26,10 +26,22 @@ func NewItemHandler(itemService ItemService) *ItemHandler {
 
 type createItemRequest struct {
 	Type    string `json:"type" binding:"required,oneof=text url"`
-	Title   string `json:"title" binding:"required"`
-	Content string `json:"content"`
+	Title   string `json:"title" binding:"required" example:"Example title"`
+	Content string `json:"content" example:"Some content blah blah."`
 }
 
+// @Summary      Create an item
+// @Description  Creates an item with data passed through body
+// @Tags         Items
+// @Security     ApiKeyAuth
+// @Accept       json
+// @Produce      json
+// @Param        body body createItemRequest true "Item data"
+// @Success      201   {object}  ItemResponse
+// @Failure      401   {object}  httpx.ErrorResponse
+// @Failure      422   {object}  httpx.ErrorResponse "Validation Error"
+// @Failure      500   {object}  httpx.ErrorResponse
+// @Router       /items [post]
 func (i *ItemHandler) Create(ctx *gin.Context) {
 	userID := ctx.MustGet("userID").(string)
 
